--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f46e8e01-6b76-4d36-bf81-7103a23735a2",
+   "id": "0f118681-f679-4c84-9ed0-85fb279799be",
    "metadata": {},
    "source": [
-    "# Prometheus Tutorial"
+    "# Helm\n",
+    "\n",
+    "Resource: https://helm.sh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a8182bc-f623-4461-996b-9345c9f5c59e",
+   "id": "96010ee4-ca4c-4c92-bee5-7aad5dfef207",
    "metadata": {},
    "outputs": [],
    "source": []
