Add and modify files

--- a/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
+++ b/09-Py-for-Cloud-DevOps-SRE/Basic-Py.ipynb
@@ -124,8 +124,8 @@
    "source": [
     "# Import library\n",
     "import <LIBRARY_NAME> [, <...>]\n",
-    "from <LIBRARY_NAME> import <FUNCTION>\n",
-    "from <LIBRARY_NAME> import <FUNCTION> # All"
+    "from <LIBRARY_NAME> import <FUNCTION> [, <...>]\n",
+    "from <LIBRARY_NAME> import * # All"
    ]
   },
   {
@@ -133,11 +133,12 @@
    "id": "acb25df9-911f-4e52-b305-023f28e99567",
    "metadata": {},
    "source": [
-    "# Pytho Data Types\n",
+    "# Python Data Types\n",
     "str\n",
     "list\n",
     "bool\n",
-    "dict"
+    "dict\n",
+    "tuple"
    ]
   }
  ],
