Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Grafana-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Grafana-Getting-Started.ipynb
@@ -5,7 +5,9 @@
    "id": "fe973cd3-7b02-4c8b-99c3-50cbf1df8e79",
    "metadata": {},
    "source": [
-    "# Grafana Open-Source"
+    "# Grafana Open-Source\n",
+    "\n",
+    "Resource: https://grafana.com"
    ]
   },
   {
