Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
@@ -35,9 +35,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%sh\n",
     "# kubernetes Cluster\n",
     "# Using minikube\n",
-    "!minikube start"
+    "## Install Minkinube\n",
+    "curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64\n",
+    "sudo install minikube-linux-amd64 /usr/local/bin/minikube\n",
+    "# Start Minikube\n",
+    "minikube start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a593e5-cec4-49ff-95a2-e49847340a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!minikube status"
    ]
   },
   {
@@ -48,6 +63,17 @@
    "outputs": [],
    "source": [
     "!kubectl cluster-info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a83000-5d92-404b-818e-7ae9f57db30d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove Minikube-linux-amd64\n",
+    "!rm minikube*"
    ]
   },
   {
@@ -95,17 +121,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf linux-amd64"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "304efe39-8046-4bed-b7c1-7c8565ad300d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!rm helm-v*"
+    "%%sh \n",
+    "# Remove linux-amd64 and helm-v*\n",
+    "rm -rf linux-amd64\n",
+    "rm helm-v*"
    ]
   },
   {
@@ -115,6 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Verify\n",
     "!helm help"
    ]
   },
