--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
@@ -197,10 +197,124 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7346f11a-e230-4ea1-81f9-4caa33433221",
+   "id": "80899364-8d9d-467e-9f64-5a721bbf2a8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!helm show chart bitnami/mysql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93764d1b-fe09-4159-8829-5b1fc20c8893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!helm show all bitnami/mysql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ddfabb-ad85-45e4-9964-86bfa4d59115",
+   "metadata": {},
+   "source": [
+    "### Learn About Releases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3789219f-0afb-4eca-aae0-ed21326d0978",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!helm list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a51669-a8eb-4a02-9a55-13e7c6ebdfe8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!helm ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6996c7e-bd16-497c-95bd-5201a4d2a0ee",
+   "metadata": {},
+   "source": [
+    "### Uninstall a Release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c3612feb-2a73-4072-ad12-482a4b987711",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "release \"mysql-1699107702\" uninstalled\n"
+     ]
+    }
+   ],
+   "source": [
+    "!helm uninstall <CHART_NAME> --keep-history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e71e3ee5-56bf-48fc-a4dd-80ff463382fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check Status\n",
+    "!helm status <CHART_NAME>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b0aeeda0-3a00-475d-bce2-34ccc216c564",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rollback was a success! Happy Helming!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rollback (Only with helm uninstall <CHART_NAME> --keep-history)\n",
+    "!helm rollback <CHART_NAME> <REVISION>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "024c281e-8b37-49d6-b6b6-3b3f3d22a174",
+   "metadata": {},
+   "source": [
+    "### Reading the Help text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07b51d34-99a6-4ce6-8b06-9eb1ac2f3db4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!helm get -h"
+   ]
   }
  ],
  "metadata": {
