Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Getting-Started.ipynb
@@ -12,6 +12,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f44ee2c6-75f2-4741-892d-c16211a0ad54",
+   "metadata": {},
+   "source": [
+    "\"Helm is the package manager for Kubernetes.\" - https://helm.sh/docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9fb3d924-28d4-405a-808a-69bd8b79f7c4",
    "metadata": {},
    "source": [
@@ -252,18 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c3612feb-2a73-4072-ad12-482a4b987711",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "release \"mysql-1699107702\" uninstalled\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!helm uninstall <CHART_NAME> --keep-history"
    ]
@@ -281,18 +281,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b0aeeda0-3a00-475d-bce2-34ccc216c564",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rollback was a success! Happy Helming!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Rollback (Only with helm uninstall <CHART_NAME> --keep-history)\n",
     "!helm rollback <CHART_NAME> <REVISION>"
