Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Prometheus-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Prometheus-Getting-Started.ipynb
@@ -11,6 +11,18 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "3ab3ada1-424e-4f4a-a3ed-3c92c09d8d90",
+   "metadata": {},
+   "source": [
+    "\"Prometheus is an open-source systems monitoring and alerting toolkit.\"\n",
+    "\n",
+    "\"Prometheus collects and stores its metrics as time series data, i.e., metrics information is stored with the timestamp at which it was recorded, alongside optional key-value pairs called labels.\"\n",
+    "\n",
+    "- https://prometheus.io/docs/introduction/overview"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a8182bc-f623-4461-996b-9345c9f5c59e",
