Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Prometheus-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Prometheus-Getting-Started.ipynb
@@ -111,13 +111,180 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run in another shell \n",
     "!kubectl port-forward service/grafana-1699109269 8000:3000 --address 0.0.0.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7ac564-ccb0-4515-9d02-c061b8829eae",
+   "id": "cc2bf1b4-9040-4939-a418-0edd207bb35b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Grafana UI\n",
+    "# USER: admin\n",
+    "# Password: Use the command given"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a402989-8a4a-4f17-abbc-19ba6c09d036",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!helm search repo prometheus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94ac4ba5-750b-4fb5-8e3d-09a63ade94de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kube Prometheus\n",
+    "!helm install bitnami/kube-prometheus --generate-name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "948b54e8-8f62-4378-b749-cb9cf6c851f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get svc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b3ee543-38c5-490d-90f0-b270e935ce69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update a firewall for GCP\n",
+    "!gcloud compute --project=$(gcloud config get project) firewall-rules update ports --allow tcp:8000,tcp:9000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1574e20-d629-483f-b264-eb2c64afabe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run in another shell \n",
+    "# !kubectl port-forward svc/kube-prometheus-1699111085-prometheus  9000:9090 --address 0.0.0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ffa9346-15b8-48eb-adfe-49f0dfb1d642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3552649e-4d27-4bba-8557-774e8f897394",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f1f976b-332a-4082-9f19-b20ebe3d10f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl create namespace nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36696dfc-e25c-458c-b7ac-b4336cbdca0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get namespaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0873685a-611e-4c20-a0de-4f3d2adbc00f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl run nginx --image=nginx -n nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "627c3942-a014-4501-a1be-407c0836f690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all -n nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "300680bf-c0ca-4437-8bb4-5d7a3f26202f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl expose pod/nginx --port=80  -n nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0572bf7-beb3-4a4d-8c94-017dae6e655a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all -n nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a41725-2f7c-4a88-a3c1-21c2331de0e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run in another shell \n",
+    "!kubectl port-forward service/nginx 9000:80 --address 0.0.0.0 -n nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6966cd7c-918f-492b-b0db-d2cd3366961e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "kubectl delete pod/nginx\n",
+    "kubectl delete svc/nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "488c2c4c-547a-437b-957c-88b3b46d03ea",
    "metadata": {},
    "outputs": [],
    "source": []
