Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Prometheus-Getting-Started.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Prometheus-Getting-Started.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### nginx via "
+    "### nginx via kubectl run"
    ]
   },
   {
@@ -287,14 +287,24 @@
    "outputs": [],
    "source": [
     "%%sh\n",
-    "kubectl delete pod/nginx\n",
-    "kubectl delete svc/nginx"
+    "kubectl delete pod/nginx -n nginx\n",
+    "kubectl delete svc/nginx -n nginx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6690b5ed-6141-4782-a42b-9e873c6df663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### nginx via Deployment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6690b5ed-6141-4782-a42b-9e873c6df663",
+   "id": "7c2f7306-717e-4b58-9c14-31dbcd0d4bf5",
    "metadata": {},
    "outputs": [],
    "source": []
