Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7dfec40-ecf6-4f9c-85f4-b46a6ac290cc",
+   "id": "4d953d27-0043-43a3-99c3-d2734502f33a",
    "metadata": {},
    "source": [
-    "# SQL (Python)\n",
-    "\n",
-    "Resource: docs.python.org (Search sqlite3)"
+    "# Helm: Kubernetes, Grafana, Prometheus (Container Observability)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "846f14f9-c2f8-4d0c-8d60-024d03f34b31",
+   "id": "bb65fd0d-1aa2-4869-b045-3f8e315bf0fb",
    "metadata": {},
    "outputs": [],
    "source": []
